update: mysql を使うため docker-compose で開発環境を作成

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,10 @@
 {
     "name": "Ruby 3.0.3 dev",
-    "context": "..",
-    "dockerFile": "Dockerfile",
+    "dockerComposeFile": [
+        "../docker-compose.yaml"
+    ],
+    "service": "web",
+    "workspaceFolder": "/rails-web-template",
     "settings": {
         "terminal.integrated.profiles.linux": {
             "zsh (login)": {
@@ -10,10 +13,9 @@
                     "-l"
                 ]
             }
-        },
+        }
     },
     "extensions": [
-        "gruntfuggly.todo-tree",
         "pkief.material-icon-theme",
         "editorconfig.editorconfig",
         "wingrunr21.vscode-ruby",
@@ -22,9 +24,5 @@
     ],
     "forwardPorts": [
         3000
-    ],
-    // "runArgs": [
-    //     "--env-file",
-    //     ".env"
-    // ],
+    ]
 }
